# Elite-AI-Interview-Benchmark-Env

./: .dockerignore  Dockerfile  README.md  app.py  inference.py  openenv.yaml  pyproject.toml  requirements.txt  sitecustomize.py
agent/: __init__.py  baseline.py
env/: __init__.py  grader.py  interview_env.py  models.py  tasks.py
server/: app.py
