[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "elite-ai-interview-evaluation-environment"
version = "1.0.0"
description = "Deterministic OpenEnv-compatible environment for benchmarking AI interviewer agents."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115,<1.0",
    "openenv-core>=0.2.0",
    "pydantic>=2.6,<3.0",
    "uvicorn>=0.30,<1.0",
    "openai>=1.0.0",
]

[project.scripts]
server = "app:main"

[tool.setuptools]
packages = ["agent", "env"]
